--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "tailwind-merge": "^3.3.1",
