--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
   },
